Fixed the alignment of file suffix in Recent Files Plugin #183

--- a/src/scss/Plugins/Community/recentFiles.scss
+++ b/src/scss/Plugins/Community/recentFiles.scss
@@ -15,4 +15,19 @@
 			background-color: var(--background-secondary-alt);
 		}
 	}
+
+	.nav-file-tag {
+		margin-inline-start: auto;
+		&:empty::before {
+			content: "md";
+		}
+	}
+
+	.tree-item-spacer {
+		display: none;
+	}
+
+	.recent-files-file-delete {
+		margin-left: var(--size-4-1);
+	}
 }
